--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,14 @@ jobs:
         with:
           string: ${{ github.repository }}
 
+      # Tambahkan step untuk memeriksa versi Docker
+      - name: Check Docker version
+        run: docker --version
+
+      # Tambahkan step untuk memeriksa versi Docker Compose
+      - name: Check Docker Compose version
+        run: docker-compose --version
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
@@ -43,9 +51,15 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
+      # Modifikasi step untuk menjalankan test
       - name: Run tests in container
         run: |
-          docker-compose -f docker-compose.test.yml up --exit-code-from app
+          docker ps
+          docker images
+          # Pastikan mongodb environment variable tersedia
+          echo "MONGODB_URI=mongodb://mongodb:27017/test" > .env
+          # Jalankan docker-compose dengan verbose mode
+          docker-compose -f docker-compose.test.yml up --exit-code-from app --verbose
 
   deploy:
     needs: build-and-test
