--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,10 @@ on:
       - main
       - master
 
+env:
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository }}
+
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
@@ -18,27 +22,13 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Convert repository name to lowercase
-        id: string
-        uses: ASzc/change-string-case-action@v5
-        with:
-          string: ${{ github.repository }}
-
-      # Tambahkan step untuk memeriksa versi Docker
-      - name: Check Docker version
-        run: docker --version
-
-      # Tambahkan step untuk memeriksa versi Docker Compose
-      - name: Check Docker Compose version
-        run: docker-compose --version
-
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
       - name: Log in to GitHub Container registry
         uses: docker/login-action@v2
         with:
-          registry: ghcr.io
+          registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
@@ -47,19 +37,13 @@ jobs:
         with:
           context: .
           load: true
-          tags: ghcr.io/${{ steps.string.outputs.lowercase }}:test
+          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:test
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
-      # Modifikasi step untuk menjalankan test
       - name: Run tests in container
         run: |
-          docker ps
-          docker images
-          # Pastikan mongodb environment variable tersedia
-          echo "MONGODB_URI=mongodb://mongodb:27017/test" > .env
-          # Jalankan docker-compose dengan verbose mode
-          docker-compose -f docker-compose.test.yml up --exit-code-from app --verbose
+          docker-compose -f docker-compose.test.yml up --exit-code-from app
 
   deploy:
     needs: build-and-test
@@ -70,19 +54,13 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Convert repository name to lowercase
-        id: string
-        uses: ASzc/change-string-case-action@v5
-        with:
-          string: ${{ github.repository }}
-
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
       - name: Log in to GitHub Container registry
         uses: docker/login-action@v2
         with:
-          registry: ghcr.io
+          registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
@@ -92,7 +70,18 @@ jobs:
           context: .
           push: true
           tags: |
-            ghcr.io/${{ steps.string.outputs.lowercase }}:latest
-            ghcr.io/${{ steps.string.outputs.lowercase }}:${{ github.sha }}
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
+
+      - name: Deploy to production
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.PROD_HOST }}
+          username: ${{ secrets.PROD_USERNAME }}
+          key: ${{ secrets.PROD_SSH_KEY }}
+          script: |
+            cd /opt/app
+            docker-compose pull
+            docker-compose up -d
