--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,8 +13,8 @@ on:
 
 env:
   REGISTRY: ghcr.io
-  # Convert repository name to lowercase
-  IMAGE_NAME: ${{ format('{0}/{1}', github.repository_owner, github.event.repository.name) | lower }}
+  # Menggunakan github.repository yang sudah tersedia dan toLowerCase()
+  IMAGE_NAME: ${{ github.repository }}
 
 jobs:
   build-and-test:
@@ -26,6 +26,10 @@ jobs:
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
+
+      - name: Convert repository name to lowercase
+        run: |
+          echo "IMAGE_NAME=$(echo ${{ github.repository }} | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
 
       - name: Log in to GitHub Container registry
         uses: docker/login-action@v2
@@ -58,6 +62,10 @@ jobs:
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
+
+      - name: Convert repository name to lowercase
+        run: |
+          echo "IMAGE_NAME=$(echo ${{ github.repository }} | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
 
       - name: Log in to GitHub Container registry
         uses: docker/login-action@v2
