--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -1,36 +1,22 @@
+version: '3.8'
+
 services:
   app:
     build: .
-    ports:
-      - "3000:3000"
-    env_file:
-      - .env
+    environment:
+      - NODE_ENV=test
+      - MONGODB_URI=mongodb://mongodb:27017/test
     depends_on:
-      mongodb:
-        condition: service_healthy
+      - mongodb
+    command: npm test
     networks:
-      - app-network
-    platform: linux/amd64
+      - test-network
 
   mongodb:
     image: mongo:5.0
-    platform: linux/amd64
-    ports:
-      - "27017:27017"
-    volumes:
-      - mongodb_data:/data/db
     networks:
-      - app-network
-    healthcheck:
-      test: echo 'db.runCommand("ping").ok' | mongosh localhost:27017/test --quiet
-      interval: 10s
-      timeout: 5s
-      retries: 5
-      start_period: 30s
+      - test-network
 
 networks:
-  app-network:
+  test-network:
     driver: bridge
-
-volumes:
-  mongodb_data:
