--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,3 @@
-# .github/workflows/main.yml
-name: Docker CI/CD
-
 on:
   push:
     branches:
@@ -12,8 +9,9 @@ on:
       - master
 
 env:
-  REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}
+  MONGODB_URI: mongodb://mongo:27017/test
+  NODE_ENV: test
+  PORT: 3500
 
 jobs:
   build-and-test:
@@ -21,10 +19,10 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+        uses: docker/setup-buildx-action@v2
 
       - name: Install Docker Compose
         run: |
@@ -42,10 +40,6 @@ jobs:
           docker-compose exec -T app npm test
           docker-compose down
 
-      - name: Run tests in container
-        run: |
-          docker compose -f docker-compose.test.yml up --exit-code-from app
-
   deploy:
     needs: build-and-test
     runs-on: ubuntu-latest
@@ -53,28 +47,20 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Convert repository name to lowercase
-        run: |
-          echo "IMAGE_NAME=$(echo ${{ github.repository }} | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
+        uses: actions/checkout@v3
 
       - name: Login to Docker Hub
-        uses: docker/login-action@v3
+        uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build and push Docker image
-        uses: docker/build-push-action@v5
+        uses: docker/build-push-action@v4
         with:
-          context: .
           push: true
           tags: SyarifMaulana67/task5_unittesting_cicd_docker-app:latest
-          
+
       - name: Deploy to production
         run: |
           echo "Deployment step - add your deployment commands here"
