--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -67,9 +67,9 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Convert repository name to lowercase
+      - name: Set repository name
         run: |
-          echo "IMAGE_NAME=$(echo ${{ github.repository }} | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
+          echo "IMAGE_NAME=${{ github.repository }}" >> $GITHUB_ENV
 
       - name: Log in to GitHub Container registry
         uses: docker/login-action@v3
