--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -90,12 +90,5 @@ jobs:
         cache-to: type=gha,mode=max
 
     - name: Deploy to production
-      uses: appleboy/ssh-action@master
-      with:
-        host: ${{ secrets.PROD_HOST }}
-        username: ${{ secrets.PROD_USERNAME }}
-        key: ${{ secrets.PROD_SSH_KEY }}
-        script: |
-          cd /opt/app
-          docker-compose pull
-          docker-compose up -d
+      run: |
+        echo "Deployment step - add your deployment commands here"
